Fix ambiguous case of string canonicalization when escape sequence is followed by a valid hexadecimal digit character in a string literal.
git-svn-id: https://gppg.svn.codeplex.com/svn@88985 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/GPPG.csproj
+++ b/GPPG.csproj
@@ -23,6 +23,7 @@
     <OutputPath>.\bin\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;CODE_ANALYSIS</DefineConstants>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,7 +38,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="GPPGcopyright.rtf" />
   </ItemGroup>
   <ItemGroup>
